# allocation-station

./: .gitignore  DEVELOPMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  README.md  TESTING.md  client_presentation.pptx  pyproject.toml  pytest.ini  requirements.txt  test_all_examples.py
.github/workflows/: ci.yml  codeql.yml  weekly-stress-test.yml
data/: schedule_config.json
data/exports/: market_data_sample.csv  market_data_sample.json  market_data_sample.xlsx  market_data_with_metadata.parquet  market_data_with_metadata_metadata.json  portfolio_data.csv  portfolio_data.parquet  portfolio_data.xlsx
docs/: API_REFERENCE.md  COOKBOOK.md  DATA_INFRASTRUCTURE.md  ENHANCED_ASSET_CLASSES.md  README.md  THEORY.md  TUTORIALS.md  USER_GUIDE.md
examples/: advanced_monte_carlo_example.py  advanced_optimization_example.py  advanced_portfolio_example.py  basic_portfolio_example.py  dashboard_example.py  data_sources_example.py  enhanced_assets_example.py  export_compatibility_example.py  integrations_example.py  longevity_planning_example.py  ml_integration_example.py  performance_attribution_example.py  reporting_example.py  scenario_analysis_example.py  visualizations_example.py
src/allocation_station/: __init__.py
src/allocation_station/analysis/: __init__.py  efficient_frontier.py  metrics.py  performance_attribution.py  risk_analysis.py
src/allocation_station/backtesting/: __init__.py  engine.py
src/allocation_station/core/: __init__.py  allocation.py  asset.py  correlation_models.py  enhanced_assets.py  portfolio.py
src/allocation_station/data/: __init__.py  export.py  market_data.py  plugins.py  scheduler.py  sources.py  validation.py
src/allocation_station/export/: __init__.py  cli.py  fix_protocol.py  graphql_api.py  julia_bindings.jl  matlab_interface.m  quantlib_integration.py  (+1 more)
tests/: __init__.py  conftest.py  test_data_generation.py  test_integration.py  test_performance.py  test_portfolio.py  test_property_based.py  test_regression.py
(+26 files in other folders)
