[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allocation-station"
version = "0.1.0"
description = "A comprehensive asset allocation strategy testing and analysis framework"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "yfinance>=0.2.18",
    "pandas-datareader>=0.10.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.14.0",
    "cvxpy>=1.3.0",  # For portfolio optimization
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",  # For data validation
    "joblib>=1.2.0",  # For parallel processing
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    "alpha-vantage>=2.3.1",  # Alpha Vantage data source
    "nasdaq-data-link>=1.0.4",  # Quandl/NASDAQ Data Link
    "openpyxl>=3.1.0",  # Excel file support
    "xlsxwriter>=3.1.0",  # Excel writing
    "pyarrow>=12.0.0",  # Parquet file support
    "fastparquet>=2023.4.0",  # Alternative Parquet engine
    "apscheduler>=3.10.0",  # Scheduling for automated updates
    "fredapi>=0.5.1",  # Federal Reserve Economic Data
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.2.0",
    "pre-commit>=3.2.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "autodoc>=0.5.0",
]

[tool.setuptools]
packages = ["allocation_station"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true